logic of game
